--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           </h3>
       </div>
       <div data-role="content">
-          <ul data-role="listview" data-divider-theme="b" data-inset="false">
+          <ul id="books-list" data-role="listview" data-divider-theme="b" data-inset="false">
               <li data-theme="c">
                   <h3>First Title</h3>
                   <p>First Author</p>
