--- a/index-fetch.html
+++ b/index-fetch.html
@@ -84,11 +84,11 @@
                   </label>
                   <input name="book-author" id="book-author" placeholder="" value="" type="text">
               </div>
-              <a data-role="button" data-inline="true" data-direction="reverse" data-rel="back"
+              <a id="btn-cancel" data-role="button" data-inline="true" data-direction="reverse" data-rel="back"
               href="#page-booklist">
                   Cancel
               </a>
-              <a data-role="button" data-inline="true" data-direction="reverse" href="#page-add">
+              <a id="btn-add-book" data-role="button" data-inline="true" data-direction="reverse" href="#page-add">
                   Submit
               </a>
           </form>
@@ -114,10 +114,10 @@
                   </label>
                   <input name="userpwd" id="userpwd" placeholder="" value="" type="password">
               </div>
-              <a data-role="button" data-inline="true" href="#page-booklist">
+              <a id="btn-clear" data-role="button" data-inline="true" href="#page-booklist">
                   Clear
               </a>
-              <a data-role="button" data-inline="true" data-direction="reverse" href="#page-login">
+              <a id="btn-login" data-role="button" data-inline="true" data-direction="reverse" href="#page-login">
                   Login
               </a>
           </form>
