--- a/index-filter.html
+++ b/index-filter.html
@@ -20,8 +20,15 @@
                 appName:'sandbox' // Your Apigee App Services app name
             });
 
-            // Reading data
-            var books = new Apigee.Collection({ "client":client, "type":"books" });
+            // Return the first 25 entities in the collection and sort them by title
+            var books = new Apigee.Collection({
+              "client":client,
+              "type":"books",
+              "qs":{
+                "limit": 25,
+                "ql":"order by title"
+              }
+            });
 
             loadBooks();
 
@@ -73,7 +80,8 @@
                     }
                 });
             }
-    });
+
+      });
   </script>
 </head>
 <body>
@@ -88,7 +96,7 @@
           </h3>
       </div>
       <div data-role="content">
-          <ul id="books-list" data-role="listview" data-divider-theme="b" data-inset="false">
+          <ul id="books-list" data-role="listview" data-filter="true" data-divider-theme="b" data-inset="false">
               <li data-theme="c">
                   <h3>First Title</h3>
                   <p>First Author</p>
