--- a/index-geo.html
+++ b/index-geo.html
@@ -12,7 +12,10 @@
   <script src="js/apigee.js"></script>
   <script>
   // jQuery document.ready function instructs the browser to execute its code after the DOM finishes loading
-    $(function () {
+    $(function () {   
+
+          // Declare variables that need to be used in multiple functions
+          var books,location;   
 
           // Initializing the SDK
             var client = new Apigee.Client({
@@ -20,13 +23,35 @@
                 appName:'sandbox' // Your Apigee App Services app name
             });
 
-            // Reading data
-            var books = new Apigee.Collection({ "client":client, "type":"books" });
+            // Get the device's geolocation and pass the result to the geoSuccess function
+            navigator.geolocation.getCurrentPosition(geoSuccess, geoFailure);
+            
+            // Store the geolocation result in the location variable and call the loadBooks function, passing the location as a parameter
+            function geoSuccess (e) {
+              console.log(e)
+              location = e;
+              loadBooks(location);
+            }
 
-            loadBooks();
+            function geoFailure () {
+              alert("Unable to access your geolocation");
+            }
+
+            //loadBooks(location); <-- This function has been moved inside of the geoSuccess function above so that it doesn't execute until the device's location has been determined
 
             // Wrap the fetch in a named function to allow it to be reused
-            function loadBooks () {
+            function loadBooks (location) {
+
+              // Return the first 25 entities in the collection and sort them by title
+              books = new Apigee.Collection({
+                "client":client,
+                "type":"books",
+                "qs":{
+                  "limit": 25,
+                  "ql":"location within 15000 of "+location.coords.latitude+","+location.coords.longitude
+                }
+              });
+
               books.fetch(
                 function(err, data) { // Success
                     if (err) {
@@ -58,7 +83,11 @@
                 // Grab the values of the form fields and build the JSON object to POST
                 book = {
                   "title":$("#book-title").val(),
-                  "author":$("#book-author").val()
+                  "author":$("#book-author").val(),
+                  "location": {
+                    "latitude": location.coords.latitude,
+                    "longitude": location.coords.longitude
+                  }
                 };
 
                 // Add the book to the collection
@@ -68,7 +97,7 @@
                     } else {
                         // Clear the form fields after successfully adding the book, then refetch the list of books and return to the list
                         $("#book-title").val(""), $("#book-author").val("");
-                        loadBooks();
+                        loadBooks(location);
                         history.back();
                     }
                 });
@@ -88,7 +117,7 @@
           </h3>
       </div>
       <div data-role="content">
-          <ul id="books-list" data-role="listview" data-divider-theme="b" data-inset="false">
+          <ul id="books-list" data-role="listview" data-filter="true" data-divider-theme="b" data-inset="false">
               <li data-theme="c">
                   <h3>First Title</h3>
                   <p>First Author</p>
