--- a/index-geo.html
+++ b/index-geo.html
@@ -10,9 +10,12 @@
   <script src="js/jquery.mobile-1.3.1.min.js"></script>
   <link href="css/jquery.mobile-1.3.1.min.css" rel="stylesheet">
   <style type="text/css">
-  #slider-wrapper {
-    padding: 5px;
-  }
+    #slider-wrapper {
+      padding: 5px;
+    }
+    .showMenu {
+
+    }
   </style>
   <script src="js/apigee.js"></script>
   <script>
@@ -20,7 +23,9 @@
     $(function () {   
 
           // Declare variables that need to be used in multiple functions
-          var books,location, distance;   
+          var books,location, distance;
+
+          showLoader();
 
           // Initializing the SDK
             var client = new Apigee.Client({
@@ -89,6 +94,7 @@
                         // Save the contents of the list to localStorage
                         localStorage.setItem('books', $('#books-list').html());
                     }
+                    $.mobile.loading("hide");
                 });
             }
 
@@ -120,6 +126,15 @@
                 });
             }
 
+            function showLoader () {
+              $.mobile.loading( "show", {
+                text: "Loading...",
+                textVisible: true,
+                theme: "c",
+                html: ""
+              });
+            }
+
             $('#books-list').on('click', 'li', deleteBook);
 
             function deleteBook (e) {
@@ -145,14 +160,23 @@
               console.log(distance)
               loadBooks(location);
             } );
+            $('#menu-btn').click(function() {
+              $( "#sidebar" ).panel( "toggle");
+              return false;
+            })
     });
   </script>
 </head>
 <body>
   <div data-role="page" data-control-title="Home" id="page-booklist">
+    <div id="sidebar" data-role="panel">
+      <h3>This is the sidebar</h3>
+    </div>
       <div data-theme="b" data-role="header">
-          <a data-role="button" data-rel="dialog" href="#page-add" data-icon="plus" data-iconpos="left"
-          class="ui-btn-right">
+        <a id="menu-btn" data-role="button" data-rel="dialog" href="#page-add" data-icon="bars" data-iconpos="notext" class="ui-btn-left">
+              Menu
+          </a>
+          <a data-role="button" data-rel="dialog" href="#page-add" data-icon="plus" data-iconpos="left" class="ui-btn-right">
               Add
           </a>
           <h3>
@@ -161,19 +185,19 @@
       </div>
       <div data-role="content">
           <ul id="books-list" data-role="listview" data-filter="true" data-divider-theme="b" data-inset="false">
-              <li data-theme="c">
+              <!-- <li data-theme="c">
                   <h3>First Title</h3>
                   <p>First Author</p>
               </li>
               <li data-theme="c">
                   <h3>Second Title</h3>
                   <p>Second Author</p>
-              </li>
+              </li> -->
           </ul>
       </div>
       <div id="slider-wrapper" data-role="footer" data-position="fixed" data-theme="b">
         <form>
-            <input type="range" name="distance-slider" id="distance-slider" min="0" max="1000" value="100">
+            <input type="range" name="distance-slider" id="distance-slider" min="0" max="1000" value="300">
         </form>
       </div>
   </div>
